# beacon

./: .gitignore  README.md  meson.build  meson_options.txt  schema.sql
include/beacon/: abstract_schema_validator.h  query_builder.h  recommendation_engine.h  schema_manager.h  storage_adapter.h  websocket_adapter.h
meson/: meson.build
src/: main.cpp  meson.build
src/adapters/: meson.build  storage_adapter.cpp  websocket_adapter.cpp
src/domain/: meson.build  recommendation_engine.cpp  schema_manager.cpp
tests/: meson.build  test_schema.cpp
